# plotten

./: .gitignore  CHANGELOG.md  CLAUDE.md  MILESTONE-DOCS.md  README.md  justfile  mkdocs.yml  prek.toml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: gallery.md  generate_images.py  generate_readme_images.py  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: bindable-aesthetics.md  dataframes.md  differences-from-ggplot2.md  ggplot2-migration.md  theming.md
docs/reference/: accessibility.md  composition.md  coords.md  core.md  datasets.md  facets.md  fonts.md  geoms.md  positions.md  recipes.md  scales.md  stats.md  themes.md
examples/: accessibility_audit.py  annotated_scatter.py  annotation_showcase.py  binned_position.py  binned_scales.py  boxplot_violin.py  breaks_integer.py  breaks_pretty.py  breaks_quantile.py  breaks_width_log.py  callable_breaks.py  composition.py  computed_aesthetics.py  confidence_ellipse.py  contour_density2d.py  coord_cartesian_zoom.py  coord_transform.py  correlation.py  crossbar_pointrange.py  custom_labellers.py  cut_functions.py  diverging_gradient.py  dotplot.py  ecdf_plot.py  error_messages.py  errorbarh.py  expand_scales.py  faceted_scatter.py  font_features.py  font_google_manrope.py  freqpoly.py  geom_blank.py  ggsave_formats.py  global_theme.py  grey_scales.py  grouped_bar.py  hatch_patterns.py  heatmap.py  hex_binning.py  histogram_density.py  (+59 more)
src/plotten/: __init__.py  _accessibility.py  _aes.py  _annotate.py  _arrow.py  _composition.py  _computed.py  _cut.py  _defaults.py  _enums.py  _expand_limits.py  _ggsave.py  _guides.py  _interaction.py  _labs.py  _layer.py  _limits.py  _linetypes.py  _options.py  _plot.py  _protocols.py  _shapes.py  _spec.py  _types.py  _validation.py  _watermark.py  fonts.py  recipes.py
src/plotten/_render/: __init__.py  _data_pipeline.py  _layout.py  _legend.py  _mpl.py  _mpl_labels.py  _mpl_scales.py  _mpl_theme.py  _resolve.py  _scale_resolution.py  _structures.py
src/plotten/_vegalite/: __init__.py  _coord.py  _data.py  _encoding.py  _facet.py  _marks.py  _positions.py  _scales.py  _stats.py  _theme.py  _unsupported.py
src/plotten/coords/: __init__.py  _cartesian.py  _equal.py  _flip.py  _polar.py  _trans.py
src/plotten/datasets/: __init__.py  _data.py  _loader.py
src/plotten/facets/: __init__.py  _grid.py  _labellers.py  _wrap.py
src/plotten/geoms/: __init__.py  _area.py  _bar.py  _base.py  _blank.py  _boxplot.py  _col.py  _contour.py  _crossbar.py  _curve.py  _density.py  _density_ridges.py  _dotplot.py  _draw_helpers.py  _errorbar.py  _errorbarh.py  _factories.py  _freqpoly.py  _hex.py  _histogram.py  _line.py  _linerange.py  _path.py  _point.py  _pointrange.py  _polygon.py  _quantile.py  _raster.py  _rect.py  _refline.py  _repel.py  _ribbon.py  _rug.py  _segment.py  _signif.py  _smooth.py  _spoke.py  _step.py  _summary.py  _text.py  (+3 more)
src/plotten/positions/: __init__.py  _base.py  _beeswarm.py  _dodge.py  _dodge2.py  _fill.py  _identity.py  _jitter.py  _jitterdodge.py  _nudge.py  _stack.py
src/plotten/scales/: __init__.py  _alpha.py  _base.py  _binned.py  _binned_position.py  _breaks.py  _brewer.py  _color.py  _date.py  _gradient.py  _grey.py  _hatch.py  _identity.py  _labels.py  _linetype.py  _linewidth.py  _log.py  _oob.py  _palettes.py  _position.py  _reverse.py  _sec_axis.py  _shape.py  _size.py  _sqrt.py  _viridis.py
src/plotten/stats/: __init__.py  _base.py  _bin.py  _bin2d.py  _boxplot.py  _contour.py  _cor.py  _count.py  _count_overlap.py  _density.py  _dotplot.py  (+15 more)
tests/: conftest.py  test_accessibility.py  test_aes.py  test_aesthetics.py  test_annotate_npc.py  test_annotations.py  test_composition.py  test_coord_flip.py  test_coords.py  test_cut.py  test_datasets.py  test_facets.py  test_fonts.py  test_geom_signif.py  test_geoms.py  test_ggplot2_fixes.py  test_hatch.py  test_integration.py  test_labs.py  test_layer.py  test_legend_keys.py  test_legends.py  test_limits.py  test_linetypes.py  test_linewidth.py  test_log_scales.py  test_new_geoms.py  test_plot.py  test_positions.py  test_protocols.py  test_pythonic.py  test_recipes.py  test_reflines.py  test_rel_sizing.py  test_rendering.py  test_repel.py  test_scales.py  test_scales_utils.py  test_shapes.py  test_spec.py  (+66 more)
(+7 files in other folders)
