[project]
name = "plotten"
version = "0.3.0"
description = "A grammar-of-graphics plotting library for Python"
readme = "README.md"
authors = [
    { name = "Brian Connelly", email = "bdc@bconnelly.net" }
]
requires-python = ">=3.13"
dependencies = [
    "narwhals>=1.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
smooth = ["scipy>=1.10"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "polars>=1.0",
    "pandas>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plotten"]
