[project]
name = "plotten"
version = "0.6.0"
description = "A grammar-of-graphics plotting library for Python"
readme = "README.md"
authors = [
    { name = "Brian Connelly", email = "bdc@bconnelly.net" }
]
requires-python = ">=3.13"
dependencies = [
    "narwhals>=1.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
smooth = ["scipy>=1.10"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "polars>=1.0",
    "pandas>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plotten"]

[tool.ruff]
target-version = "py313"
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific
    "PT",     # flake8-pytest-style
]
ignore = [
    "E501",   # line length handled by formatter
    "SIM108", # ternary can reduce readability
    "UP007",  # X | Y union syntax (conflicts with __future__ annotations)
]

[tool.ruff.lint.isort]
known-first-party = ["plotten"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --tb=short"
