[project]
name = "plotten"
version = "0.1.0"
description = "A grammar-of-graphics plotting library for Python"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Brian Connelly", email = "bdc@bconnelly.net" }
]
requires-python = ">=3.13"
keywords = ["plotting", "grammar-of-graphics", "ggplot", "visualization", "data-visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "narwhals>=1.0",
    "matplotlib>=3.8",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/briandconnelly/plotten"
Documentation = "https://briandconnelly.github.io/plotten"
Repository = "https://github.com/briandconnelly/plotten"
Issues = "https://github.com/briandconnelly/plotten/issues"

[project.optional-dependencies]
scipy = ["scipy>=1.10"]
smooth = ["scipy>=1.10"]

docs = [
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.29",
    "mkdocs-llmstxt>=0.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "polars>=1.0",
    "pandas>=2.0",
    "scipy>=1.10",
    "ty>=0.0.1a7",
    "prek>=0.3.6",
    "pytest-cov>=7.0.0",
    "duckdb>=1.5.0",
    "pyarrow>=23.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plotten"]

[tool.ruff]
target-version = "py313"
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific
    "PT",     # flake8-pytest-style
]
ignore = [
    "E501",   # line length handled by formatter
    "SIM108", # ternary can reduce readability
    "UP007",  # X | Y union syntax (conflicts with __future__ annotations)
]

[tool.ruff.lint.isort]
known-first-party = ["plotten"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --tb=short"
